styles.css
.pb-num {
    font-size: 1.5rem;
    margin: 2rem;
}
.pb-num.active {
    font-weight: 1000;
}
.digitala-progress-bar {
    font-size: 1.5rem;
    display: flex;
    margin-bottom: 0;
    margin-top: 0;
    height: 1.7em;
}
.pb-svg-front {
    height: 1.6em;
    margin-top: -0.1em;
    width: 100%;
}
.pb-svg-back {
    height: 1.6em;
    width: 100%;
}
.pb-phase-name {
    margin-right: 2rem;
}
.pb-step {
    flex: 1;
    border-top: 2px solid lightgray;
    border-bottom: 2px solid lightgray;
    text-align: center;
    vertical-align: top;
}
.pb-step.active {
    background-color: lightgray;
}

.pb-step.active.first {
    border-radius: 10px 0 0 10px;
}

.pb-step.active.last {
    border-radius: 0 10px 10px 0;
}
.pb-spacer {
    width: 100%;
    border-top: 2px solid lightgray;
    border-bottom: 2px solid lightgray;
}

.pb-spacer-left > svg {
    display: block;
    margin-left: auto;
}

.pb-spacer-left > svg,
.pb-spacer-right > svg {
    width: auto;
}

.digitala-column {
    margin: 0 1vh 1vh 0;
}

.digitala-card {
    margin-top: 1vh;
}

.navbuttons {
    position: relative;
    left: 45%;
}

.scrollbox200 {
    height: 200px;
    line-height: 2em;
    overflow: auto;
}

.scrollbox400 {
    height: 408px;
    line-height: 2em;
    overflow: auto;
}

.btn.btn-primary.record-btn {
    display: inline-block;
}

.btn.btn-primary.stopRecord-btn {
    display: none;
}

.btn.btn-primary.listen-btn {
    display: inline-block;
}

#microphoneIcon {
    margin: auto;
    position: relative;
}

#microphoneIconBox {
    display: flex;
    position: absolute;
    width: 150px;
    height: 150px;
    border-radius: 50%;
    border: 2.5px dashed transparent;
    animation: spin 60s linear infinite;
}

@keyframes spin {
    100% {
        transform: rotateZ(360deg);
    }
}

.tooltip-text {
    font-size: 16px;
    margin: 5px;
}

.tooltip-box {
    background: white;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
    border: 3px solid grey;
    padding: 5px 15px;
    width: 200px;
    text-align: left;
    border-radius: 25px;
}

.feedbackcontainer {
    position: fixed;
    text-align: left;
    text-indent: 20px;
    font-size: 14px;
    font-family: Arial, Helvetica, sans-serif;
    border-radius: 35px 50px 50px 35px;
    line-height: 40px;
    bottom: 10px;
    right: 60px;
    height: 40px;
    width: 160px;
    z-index: 4;
    background-color: #d3d3d3;
}

#collapser {
    position: fixed;
    font-size: 16px;
    font-family: Arial, Helvetica, sans-serif;
    border-radius: 50px 50px 50px 50px;
    height: 40px;
    width: 40px;
    display: inline-block;
    bottom: 10px;
    right: 60px;
    z-index: 5;
}

#feedbacksite {
    position: fixed;
    bottom: 60px;
    right: 10px;
    height: 40vw;
    width: 25vw;
    z-index: 5000;
}

#feedback {
    position: fixed;
    bottom: 22.5px;
    right: 72.5px;
}

.modal-footer > .mform > .form-group {
    margin: 0;
}

.modal-footer .col-form-label {
    flex: 0;
    padding: 0;
}

